<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">


    <TextView
        android:id="@+id/tvLoginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/beamin"
        android:text="@string/app_name"
        android:textColor="@color/Smalt"
        android:textSize="68sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/hint_dang_nhap"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginLabel">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:backgroundTint="@color/Smalt"
        android:fontFamily="@font/beamin"
        android:text="@string/label_dang_nhap"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgot"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:backgroundTint="@color/Smalt"
        android:fontFamily="@font/beamin"
        android:text="@string/label_dang_ki"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="4dp"
        android:text="@string/label_forgot_password"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>