<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/tvLoginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/beamin"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="#00468B"
        android:textSize="68sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/hint_dang_nhap"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginLabel"
        tools:inputType="textEmailAddress" />
        <requestFocus/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
<requestFocus/>

    <EditText
        android:id="@+id/edtRePassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/re_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:ignore="TextContrastCheck">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@color/Smalt"
        android:fontFamily="@font/beamin"
        android:text="@string/label_dang_ki"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRePassword" />
</androidx.constraintlayout.widget.ConstraintLayout>