<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/beamin"
        android:text="@string/label_reset_password"
        android:textAlignment="center"
        android:textColor="@color/Smalt"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/hint_dang_nhap"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSendReset"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_primary"
        android:backgroundTint="@color/Smalt"
        android:fontFamily="@font/beamin"
        android:text="@string/send_resetpassword_email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>