<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loAlarmRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Smalt"
    tools:context=".activity.AlarmActivity">

    <TextView
        android:id="@+id/tvCurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="44dp"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClock" />

    <TextView
        android:id="@+id/tvClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="172dp"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentDate" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loAlarm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5CFFFFFF"
        tools:layout_editor_absoluteX="-185dp"
        tools:layout_editor_absoluteY="160dp">

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/circular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.715" />

        <TextView
            android:id="@+id/tvDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="236dp"
            android:text="@string/delay"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTurnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_up_to_turn_off"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDelay"
            app:layout_constraintVertical_bias="0.94" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>